tests/expectations/parser/functions/const_input_fail.out
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'const'
    --> test:3:16
     |
   3 |     function x(const x: u8) -> u8 {}
     |                ^^^^^
